# python-cv-trim-scanned-image

./: .gitignore  AGENTS.md  PORTABLE_WINDOWS.md  README.md  STATUS.md  phase_01_environment.md  phase_02_input_monitoring.md  phase_03_vision_pipeline.md  phase_04_geometry_correction.md  phase_05_optimization_output.md  phase_06_error_handling.md  pyproject.toml  saver.py  scanner.py
portable_scanner/: README.txt  run_scanner.bat
portable_scanner/build_tools/: build.bat
portable_scanner/scanner_src/: detector.py  scanner.py  warp.py  watcher.py
